# p8-forecast-pipeline

./: .directory  .gitignore  README.md  docker-compose.yml  main.py  p8-profiling.ipynb  pyproject.toml  values.yaml
airbyte_platform/: client.py  resources.py  setup_airbyte.py  sources.yaml
data/: .~lock.profiling_combine.xlsx#  profiling_combine.xlsx  profiling_json.xlsx  profiling_raw.xlsx
dbt_pipeline/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml
dbt_pipeline/macros/: stg_weather.sql  stg_weathers.sql
dbt_pipeline/models/staging/: base_raw_infoclimat.sql  sources.yml  stg_forecastmeteo.sql  stg_weather_tables.sql
dbt_pipeline/seeds/: mapping_vent_direction.csv  weather_stations.csv
